--- a/react-estate-ui/src/components/navbar/navbar.scss
+++ b/react-estate-ui/src/components/navbar/navbar.scss
@@ -25,7 +25,7 @@ nav{
 
         .logo{
             font-weight: bold;
-            font-size: 20px;
+            font-size: 19px;
             display: flex;
             align-items: center;
             gap: 10px;
@@ -51,7 +51,7 @@ nav{
         display: flex;
         align-items: center;
         justify-content: flex-end;
-        background-color: #fcf5f3;
+        background-color: #d2f3f3;
         height: 100%;
 
         @include tabletScreen{
