--- a/react-estate-ui/src/layout.scss
+++ b/react-estate-ui/src/layout.scss
@@ -7,6 +7,8 @@
     margin-right: auto;
     padding-left: 20px;
     padding-right: 20px;
+    display: flex;
+    flex-direction: column;
 
     @include tabletScreen{
         background-color: green;
@@ -16,5 +18,9 @@
     @include phoneScreen{
         background-color: red;
         max-width: 440px;
+    }
+
+    .content{
+        flex: 1;
     }
 }
