--- a/react-estate-ui/src/routes/danhSachPage/danhSachPage.scss
+++ b/react-estate-ui/src/routes/danhSachPage/danhSachPage.scss
@@ -1,15 +1,23 @@
-.danhSachPage{
-    display: flex;
+.danhSachPage {
+  display: flex;
+  //
+  height: 100%;
+  .chuaDanhSach {
+    flex: 3;
+    //
     height: 100%;
-    .khungDanhSach{
-        flex: 3;
-
-        .wrapper{
-            padding-right: 50px;
-        }
+    .padding {
+      display: flex;
+      flex-direction: column;
+      gap: 50px;
+      overflow-y: scroll;
+      //
+      height: 100%;
+      padding-bottom: 50px;
     }
-    .khungMap{
-        flex: 2;
-        background-color: antiquewhite;
-    }
+  }
+  .chuaMap {
+    flex: 2;
+    background-color: #d2f3f3;
+  }
 }
