--- a/react-estate-ui/src/routes/homePage/homePage.scss
+++ b/react-estate-ui/src/routes/homePage/homePage.scss
@@ -3,14 +3,14 @@
     display: flex;
     height: 100%;
     
-    .textContainer{
+    .chuaText{
         flex: 3;
     }
     .padding{
         margin-bottom: 20px;
     }
 
-    .imgContainer{
+    .chuaImg{
         flex:2;
         background-color: #d2f3f3;
         position: relative;
