--- a/react-estate-ui/src/routes/layout/layout.scss
+++ b/react-estate-ui/src/routes/layout/layout.scss
@@ -11,16 +11,16 @@
     flex-direction: column;
 
     @include tabletScreen{
-        // background-color: #d2f3f3;
         max-width: 780px;
     }
 
     @include phoneScreen{
-        // background-color: rgb(248, 207, 245);
         max-width: 440px;
     }
 
     .content{
-        flex: 1;
+        // flex: 1;
+        //
+        height: calc(100vh - 100px);
     }
 }
